package net.proselyte.basepatterns.behavioral.visitor;

public class Database {
}
