package net.proselyte.basepatterns.behavioral.visitor;

public class ProjectRunner {
    public static void main(String[] args) {
        Project project = new Project();

        System.out.println("Junior in Action...");

        System.out.println("\n============================\n");

        System.out.println("Senior in Action...");
    }
}
